<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="newBuildingViewModel"
            type="tech.demura.reportcreator.presentation.new_building.NewBuildingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.new_building.NewBuildingFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name_of_building"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorInputNameOfBuilding="@{newBuildingViewModel.errorInputByildingName}"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/til_name_of_responsible_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name_of_building"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/default_building_name"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name_of_responsible_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorInputResponsiblePerson="@{newBuildingViewModel.errorInputResponsiblePerson}"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/til_name_of_building"
            app:layout_constraintBottom_toTopOf="@+id/til_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name_of_responsible_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/default_person_name"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorInputAddress="@{newBuildingViewModel.errorInputAddress}"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/til_name_of_responsible_person"
            app:layout_constraintBottom_toTopOf="@+id/btn_save_building"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/default_address"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save_building"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save_building"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>